# SeAAI

./: .gitignore  README.md  start-all.ps1  start-all.py  stop-all.ps1  stop-all.py
.claude/skills/: README.md
AI_Desktop/: .gitignore  Cargo.toml  LICENSE  README.md  build-release.ps1  start-ai-desktop.py
AI_Desktop/.cargo/: config.toml
AI_Desktop/.pgf/: DESIGN-AIDesktopV2.md  HANDOFF-AIDesktopV2.md  VERIFY-AIDesktopV2.md  WORKPLAN-AIDesktopV2.md  status-AIDesktopV2.json
AI_Desktop/docs/: AI_Desktop_Concept.md  AI_Desktop_MCP_Gantt_Plan.md  AI_Desktop_Manual.md  TSG(Trust & Security Gateway).md  TSG.md  Tool list.md  Tool_schema.md
AI_Desktop/dynamic_tools/: seaai_approval.json  seaai_approval.py  seaai_audit_query.json  seaai_audit_query.py  seaai_browser.json  seaai_browser.py  seaai_echo.json  seaai_echo.py  seaai_hub.json  seaai_hub.py  seaai_hub_check.json  seaai_hub_check.py  seaai_mailbox.json  seaai_mailbox.py  seaai_member_state.json  seaai_member_state.py
AI_Desktop/src/: ai-tool.ps1  ai-tool.py  ai_desktop_mcp.rs  ai_tool_cli.md  ai_tool_cli.rs  audit.rs  core.rs  lib.rs  policy.rs  tsg.rs
AI_Desktop/src/ai_tools/: auto_tool_generator.rs  dynamic.rs  file_manager_tool.rs  mod.rs  network_api_tool.rs  process_manager_tool.rs  screen_capture_tool.rs  system_info_tool.rs  web_search_tool.rs
AI_Desktop/src/browser/: control_plane.rs  diagnostics.rs  mod.rs  types.rs
AI_Desktop/state/browser/: routes.json
AI_Desktop/state/echo/: Signalion.md
Aion/: .cursorrules  .geminirules  .mcp.json  AGENTS.md  CLAUDE.md  README.md  mde_icon_convert.py  start-aion.py
Aion/.pgf/: status-SoloLoop.json
Aion/.seaai/: CAP.md  ENV.md  agent-card.json
Aion/Aion_Core/: Aion.md  Aion_persona_v1.md  SELF_EVOLUTION_LOG.md  evolution-log.md
Aion/ag_memory/: SKILL.md  memory_cli.py
Aion/docs/: LOG-FlowWeave-Session-20260412.md  SPEC-MMHT-Aion.md
CCM_Creator/: CLAUDE.md  DESIGN-MemberCreation.md
CCM_Creator/refs/: CREATION-PRINCIPLES.md  EXISTING-MEMBERS.md  HUB-PROTOCOL.md  SEAAI-OVERVIEW.md  SEAAI-SYSTEMS.md
CCM_Creator/templates/: CLAUDE-template.md  SOUL-template.md  STATE-template.json
ClNeo/: .mcp.json  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  README.md  start-clneo.py
ClNeo/.pgf/: DESIGN-ADPHub-LongRunning.md  DESIGN-AgentCard.md  DESIGN-CCM-Creator-v2.md  DESIGN-DiscoveryEngine.md  DESIGN-EpigeneticPPR.md  DESIGN-EvolutionLogV2.md  DESIGN-HubFlowWeave.md  DESIGN-MCPHubSleep.md  DESIGN-MCPMultiAgent.md  DESIGN-Navelon-Birth.md  DESIGN-SASkill.md  DESIGN-SCS-v2-Implementation.md  DESIGN-SynerionRouting.md  DESIGN-TeamOrchestrator.md  DESIGN-TerronCreation.md  DESIGN-TrendIntel-Product.md  PLAN-INDEX.md  SPEC-FlowWeave-v2.md  WORKPLAN-AIInternetStack.md  WORKPLAN-MCPHubSleep.md  WORKPLAN-MCPMultiAgent.md
ClNeo/.seaai/: CAP.md  ENV.md  agent-card.json
ClNeo/ClNeo_Core/: Agents.md  ClNeo.md  ClNeo_Evolution_Chain.md  ClNeo_Evolution_Log.md  ClNeo_Evolution_Report_2026-03-12.md  ClNeo_Evolution_Report_2026-03-16.md  ClNeo_persona_v1.md  ClNeo_persona_v2.md  PgPgfReview_Log.md  SEAAI-OVERVIEW.md  SESSION-BOOTSTRAP.md  evolution-log.md
MailBox/: PROTOCOL-MailBox-v1.0.md
NAEL/: .mcp.json  CLAUDE.md  PROJECT_STATUS.md  nael_adp_hub.py  start-nael.py
Navelon/: AGENTS.md  CLAUDE.md
SeAAIHub/: .gitignore  PROTOCOL-SeAAIChat-v1.0.md  README.md  emergency-stop.py  hub-start-debug.ps1  hub-start.py  hub-status.py  hub-stop.ps1  hub-stop.py  verify-emergency-stop.py
SeAAIHub/gateway/: Cargo.toml  README.md  SPEC-MME-Protocol-v1.0.md
SeAAIHub/gateway/.pgf/: DESIGN-MmePythonAsIs.md  DESIGN-MmeRedesign.md  DESIGN-MmeRust.md  VALIDATION-MmhtV3.md  VALIDATION-Shadow.md  WORKPLAN-MmeRust.md  bug-verdict.md  promotion-log.md  status-MmeRust.json
SeAAIHub/gateway/src/: config.rs  error.rs  hub_client.rs  main.rs  pool.rs  router.rs  server.rs  sig.rs  wire.rs
SeAAIHub/hub/: Cargo.toml
SeAAIHub/hub/src/: chatroom.rs  main.rs  protocol.rs  router.rs  transport.rs
SharedSpace/: Aion_msg1.md  Aion_msg4.md  Aion_msg5.md  CREATIVE-ENGINE-DNA.md  ClNeo_msg1.md  ClNeo_msg2.md  ClNeo_msg3.md  ClNeo_msg4.md  ClNeo_msg5.md  ECOSYSTEM-MAP.md  NAEL_msg2.md  NAEL_msg3.md  NOTICE-port-change.md  Synerion_msg2.md  Synerion_msg3.md  Synerion_msg5.md  Synomia.md  Yeon-ADP-SoloTest-Guide.md  Yeon_msg1.md  member_registry.md
Signalion/: .env.example  .gitignore  CLAUDE.md
Signalion_Creator/: CLAUDE.md  DESIGN-SignalionCreation.md
Standards/: README.md
Synerion/: AGENTS.md  PROJECT_STATUS.md  SESSION_CONTINUITY.md  start-synerion.ps1  start-synerion.py
Terron/: AGENTS.md  AGENTS.md.bak-v1.0-20260418  CLAUDE.md
Vera/: CLAUDE.md
Yeon/: .mcp.json  AGENTS.md  AGENTS.md.v1.0-backup  CLAUDE.md  README.md  run_kimi.ps1  run_kimi.py  start-yeon.py
docs/: ADP-Loop-Implementation-Guide.md  ClNeo_ADPMaster_Specification.md  ClNeo_Autonomous_Loop.md  ClNeo_Complete_Autonomous_Creation_Pipeline.md  ClNeo_Full_Process_Specification.md  FlowWeave-Session-2026-04-14.md  INDEX.md  PGTP-Spec-v1.1.md  PPR-Example-Intermediate-Advanced.md  SPEC-FlowWeave-v2.md  SPEC-Member-Registry.md  SPEC-Member-Workspace-Standard.md  SPEC-SubAgent-MultiAgent-Communication.md  SeAAI-Architecture-PG.md  SeAAI-Leadership-Framework.md  SeAAI-Technical-Specification.md  SelfAct-Specification.md  self-adp-loop.md
sadpig70/: README.md
(+1231 files in other folders)
