[package]
name = "seaai-ai-desktop"
version = "1.0.0"
edition = "2021"
description = "SeAAI AI Desktop — MCP server providing OS tools for SeAAI autonomous AI members"
authors = ["Jung Wook Yang <sadpig70@gmail.com>"]
license = "MIT"
repository = "https://github.com/sadpig70/SeAAI"

[features]
default = ["network-support"]
# redis-support = ["redis"]  # Legacy: HTTP 서버에서 사용
network-support = ["trust-dns-resolver"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
# actix-web = "4"        # Legacy: HTTP 서버
# actix-cors = "0.7"      # Legacy: HTTP 서버
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "net", "process", "io-util", "io-std"] }
tokio-stream = "0.1"
tokio-native-tls = "0.3"
tokio-util = { version = "0.7", features = ["io", "compat"] }
num_cpus = "1.16"
tracing = "0.1"
tracing-serde = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
prometheus = "0.13"
once_cell = "1"
bytes = "1"
walkdir = "2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
sysinfo = "0.37"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
regex = "1"
htmlescape = "0.3"
sha1 = "0.10"
hex = "0.4"
thiserror = "1"
urlencoding = "2"
scraper = "0.17"
url = "2.5"
base64 = "0.22"
# redis = { version = "0.25.4", features = ["aio", "tokio-comp", "connection-manager"], optional = true }  # Legacy
trust-dns-resolver = { version = "0.23", features = ["tokio"], optional = true }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
# lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "builder", "tokio1-rustls-tls"] }  # Legacy: email
# async-imap = "0.9"        # Legacy: email
# oauth2 = "4.4"            # Legacy: email
handlebars = "5.1"
dashmap = "5.5"
uuid = { version = "1.8", features = ["v4"] }
# headless_chrome = "1.0"  # Legacy: browser tools
# image = "0.25.8"         # Legacy: image processing
# lopdf = "0.34"           # Legacy: pdf
# pdfium-render = "0.8"    # Legacy: pdf
rayon = "1.10"
# git2 = "0.18"            # Legacy: git tool
rand = "0.8"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
# clipboard-win = "5.4"    # Legacy: clipboard tool
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinHttp",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Registry"
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[[bin]]
name = "ai_tool_cli"
path = "src/ai_tool_cli.rs"

# [[bin]]
# name = "ai_desktop_http" # Legacy: HTTP 서버 (_legacy/src/main.rs로 이동됨)
# path = "src/main.rs"

[[bin]]
name = "ai_desktop_mcp"  # MCP 서버
path = "src/ai_desktop_mcp.rs"

[lib] 
name = "ai_desktop_lib"