[package]
name = "seaai-ai-desktop-v2"
version = "2.0.0"
edition = "2021"
description = "SeAAI-only MCP bridge with explicit policy, audit logging, and approval-aware tool execution"
authors = ["Jung Wook Yang <sadpig70@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[[bin]]
name = "ai_desktop_mcp"
path = "src/ai_desktop_mcp.rs"

[lib]
name = "ai_desktop_v2"
path = "src/lib.rs"
