[package]
name = "mme"
version = "1.0.0-rs.1"
edition = "2021"
description = "Micro MCP Express — Rust port of SeAAIHub MCP Bridge Gateway"
license = "MIT"

[[bin]]
name = "mme"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
